# mage

./: Cargo.toml  README.md
examples/: hello.rs
src/: generation.rs  lib.rs  present.rs  render.rs  shader.wgsl
