[package]
name = "mage"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
anyhow = "1.0"

[dependencies]
bytemuck = "1.7"
bytemuck_derive = "1.0"
futures = "0.3"
image = "0.23"
rand = "0.8"
thiserror = "1.0"
wgpu = "0.9.0"
winit = "0.25"
