[package]
name = "md-mage"
version = "0.1.0"
edition = "2018"
author = "Matt Davies"
description = "Matt's ASCII Game Engine"
license = "MIT"
homepage = "https://github.com/Cthutu/mage"
repository = "https://github.com/Cthutu/mage"

[dev-dependencies]
anyhow = "1.0"

[dependencies]
bytemuck = "1.7"
bytemuck_derive = "1.0"
futures = "0.3"
image = "0.23"
rand = "0.8"
thiserror = "1.0"
wgpu = "0.9.0"
winit = "0.25"
